--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.0.15
+  flutter_launcher_icons: ^0.13.1
   cloud_firestore: ^5.2.0
   google_sign_in: ^6.2.1
   lottie: ^3.1.2
@@ -42,6 +44,11 @@ dependencies:
   rive: ^0.13.12
   get: ^4.6.6
   cupertino_icons: ^1.0.6
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/Apna Gaur Logo.png"
 
 dev_dependencies:
   flutter_test:
