--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  path_provider: ^2.1.4
+  flutter_image_compress: ^2.3.0
+  shimmer: ^3.0.0
+  permission_handler: ^11.3.1
+  firebase_storage: ^12.3.3
+  image_picker: ^1.1.2
+  mapbox_search: ^3.2.0
   google_api_headers: ^1.0.0
   flutter_google_places: ^0.3.0
   google_maps_flutter: ^2.1.8
